--- a/source/css/partials/_variables.scss
+++ b/source/css/partials/_variables.scss
@@ -22,7 +22,7 @@ $font-size-larger: $golden-ratio * $font-size-large;
 $font-family-text: sans-serif;
 
 /* Color */
-$primary-color: #ececec;
+$primary-color: #fff;
 $dark-primary-color: darken($primary-color, 80%);
 
 /* Misc. */
