--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Elijero Elia</h1>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="navbar-center navbar-heading">
+    <p>Elijero Elia</p>
+  </div>
+</nav>
