--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,3 +3,21 @@
     <p>Elijero Elia</p>
   </div>
 </nav>
+<div class="container-fluid">
+	<section id="sec-1">
+		<div class="row">
+		  <div class="col-sm-4"><img src="http://placehold.it/400x500" class="img-responsive"></div>
+		  <div class="col-sm-4"><img src="http://placehold.it/400x500" class="img-responsive"></div>
+		  <div class="col-sm-4"><img src="http://placehold.it/400x500" class="img-responsive"></div>
+		</div>
+	</section>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+    	<iframe width="560" height="315" src="https://www.youtube.com/embed/XerE9AGq9T4?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
