--- a/source/css/partials/_navs.scss
+++ b/source/css/partials/_navs.scss
@@ -43,7 +43,8 @@
   width: 100%;
   left: 0;
   top: 0;
-  padding: 30px 15px 15px;
+  padding-top: 30px;
+  padding-bottom: 15px;
   text-align: center;
   margin: auto;
 
