--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 </nav>
 <div class="container-fluid">
-	<section id="sec-1">
+	<section id="sec-1" data-top="opacity: 1" data--400-top="opacity: 0">
 		<div class="row">
 		  <div class="col-sm-4"><img src="http://placehold.it/400x500" class="img-responsive"></div>
 		  <div class="col-sm-4"><img src="http://placehold.it/400x500" class="img-responsive"></div>
