--- a/source/css/partials/_common.scss
+++ b/source/css/partials/_common.scss
@@ -9,30 +9,10 @@
 }
 
 body {
-  font: $font-size-small $font-family-text;
-  text-transform: uppercase;
+  font: $font-size-regular $font-family-text;
   background-color: $primary-color;
 }
 
 a {
   text-decoration: none;
-}
-
-section {
-	padding-top: 35px;
-	padding-bottom: 35px;
-}
-
-.modal-dialog {
-	position: fixed;
-	top: 25%;
-	left: 28%;
-}
-
-.modal-content {
-	background-color: transparent;
-	border: none;
-	border-radius: 6px;
-	-webkit-box-shadow: none;
-	box-shadow: none;
 }
